--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
-    <string name="app_name">Spot-it-hackfes2k25</string>
+    <string name="app_name">.hacothon</string>
     <string name="welcome_to_spot_it">Welcome to Spot it!</string>
+    <string name="search">Search</string>
+    <string name="enter_the_word">Enter the Word</string>
 </resources>
