--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="Home_fragment">Home Fragment</string>
     <string name="History_fragment">History Fragment</string>
     <string name="Settings_fragment">Settings Fragment</string>
+    <string name="searchbar_hint">search here...</string>
 </resources>
